--- a/templates/settings.html
+++ b/templates/settings.html
@@ -290,9 +290,9 @@
                                                     <label class="switch" for="include_email_form">
                                                         <input type="checkbox" id="include_email_form" name="include_email_form" {% if settings['include_email_form'] %}checked{% endif %}>
                                                         <span class="slider round"></span>
-                                                    </label>
-                                                    <span class="switch-label">Show email form before chat starts</span>
                                                 </div>
+                                                <p class="form-text text-muted">Requires users to enter their name and email before continuing with chatbot help</p>
+                                            </div>
                                             </div>
                                         </div>
                                     </div>
