--- a/templates/settings.html
+++ b/templates/settings.html
@@ -20,7 +20,7 @@
             <div class="col-md-4 col-xl-3">
                 <div class="card sidebar-card">
                     <div class="card-header">
-                        <h5 class="card-title mb-0">Account Settings</h5>
+                        <h5 class="card-title mb-0">Account Setting</h5>
                     </div>
                         <div class="list-group list-group-flush" role="tablist">
                             <a class="list-group-item list-group-item-action active" data-toggle="list" role="tab" data-target="styling-section">
