--- a/static/css/index.css
+++ b/static/css/index.css
@@ -205,7 +205,7 @@
             display: block; /* Change to block for vertical stacking */
             padding: 5px;
             margin: 2px;
-            background-color: var(--bot-bubble-color);
+            background-color: rgba(var(--bot-bubble-color-rgb), 0.95);;
             border: 1px solid var(--title-color); /* Use bot bubble color for border */
             border-radius: 7px;
             cursor: pointer;
@@ -227,7 +227,7 @@
         }
 
         .suggested-question:hover {
-            background-color: var(--title-color); /* Change background color on hover */
+            background-color: var(--bot-bubble-color); /* Change background color on hover */
             color: var(--background-color); /* Change text color on hover */
             border: 1px solid var(--title-color); /* Optional: Change border color on hover */
         }
