--- a/templates/settings.html
+++ b/templates/settings.html
@@ -99,7 +99,7 @@
                                                             <input type="checkbox" id="disable_auto_open" name="disable_auto_open" {% if settings['open_by_default'] %}checked{% endif %}>
                                                             <span class="slider round"></span>
                                                         </label>
-                                                        <span class="switch-label">Disable auto-open on page load</span>
+                                                        <span class="switch-label">Enable auto-open on page load</span>
                                                     </div>
                                                     <small class="form-text text-muted">When enabled, the chatbot will not automatically open when a user visits your website.</small>
                                                 </div>
