--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                         {% block content %}{% endblock %}
                         <div id="myPopup" class="popup">
                             <div class="popup-content" style="display: flex; flex-direction: column; justify-content: flex-end;">
-                                <p id="closePopup" class="close"></p>
+                                <p id="closePopup" class="close">x</p>
                                 <h4>
                                     <b>Upgrade your plan to <b style="color: rgb(158, 222, 18);">Professional</b> to view this feature</b>
                                 </h4>
