fixed no paywall for lead link

--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -49,3 +49,8 @@
     cursor: pointer;
     font-style: underline;
 }
+.test{
+    background-color: #4CAF50;
+    background-color: #FF5252;
+    background-color: #dbdbdb7c;
+}
